# PatoData

./: .editorconfig  .gitignore  .globalconfig  161219-161219.XSD  Directory.Build.props  Directory.Build.targets  PatoData.sln  PatoUdtraek-xml_Example.XML  README.md  appsettings.json  loop01_232233.binlog  loop02_232247.binlog  loop03_232303.binlog  loop04_232318.binlog  loop05_232332.binlog  loop06_232348.binlog  loop07_232402.binlog  loop08_232418.binlog  loop09_232432.binlog  loop10_232448.binlog  loop11_232503.binlog  loop12_232517.binlog  loop13_232532.binlog  loop14_232546.binlog  loop15_232601.binlog  pyproject.toml  requirements.txt  slowbuild.binlog  slowbuild2.binlog
.github/: copilot-instructions.md
XsdAnalyzer/: AppConfig.cs  ImportServiceOptions.cs  LogFile.cs  Observability.cs  Program.cs  SqlGenerator.cs  XmlImportBackgroundService.cs  XmlImporter.cs  XsdAnalyzer.csproj
XsdAnalyzer.Tests/: ImportTinyXmlTests.cs  MiniSchema.xsd  XsdAnalyzer.Tests.csproj
publish/XsdAnalyzer/: XsdAnalyzer.deps.json  appsettings.json
scripts/: DELETE_ALL.sql  capture-slow-build-once.ps1  capture-slow-build.ps1  delete  deploy-end-to-end.ps1  install-from-env.ps1  install-importer-service.ps1  reinstall-and-verify.ps1  service.env.ps1  uninstall-from-env.ps1  uninstall-importer-service.ps1
src/: analyze_xsd.py
tests/: test_analyze_xsd.py  test_import.py
xsd/: sample.xsd
